--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-525.1KB/s(Youtube:不良林), server: 167.88.61.175, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇦🇺 澳大利亚-189.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-264.5KB/s(Youtube:不良林), server: 167.88.63.59, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-929.5KB/s(Youtube:不良林), server: 167.88.61.213, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-701.8KB/s(Youtube:不良林), server: 167.88.62.68, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-871.9KB/s(Youtube:不良林), server: 167.88.63.59, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-827.4KB/s(Youtube:不良林), server: 167.88.62.68, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇦🇺 澳大利亚-425.2KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇦 加拿大-533.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-546.5KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇺🇸 美国-338.8KB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-877.3KB/s(Youtube:不良林), server: 167.88.62.68, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-305.5KB/s(Youtube:不良林), server: 167.88.61.213, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-880.6KB/s(Youtube:不良林), server: 167.88.61.213, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-321.2KB/s(Youtube:不良林), server: 167.88.61.175, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-615.0KB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 167.88.63.59, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-561.3KB/s(Youtube:不良林), server: 167.88.63.59, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-466.0KB/s(Youtube:不良林), server: 167.88.63.59, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-438.6KB/s(Youtube:不良林), server: 167.88.63.59, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-525.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-189.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-701.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-827.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-425.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-533.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-877.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-880.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-615.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-525.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-189.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-701.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-827.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-425.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-533.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-877.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-880.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-615.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-525.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-189.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-701.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-827.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-425.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-533.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-877.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-880.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-615.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-525.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-189.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-701.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-827.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-425.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-533.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-877.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-880.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-615.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-525.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-189.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-701.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-827.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-425.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-533.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-877.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-880.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-615.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-525.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-189.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-701.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-827.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-425.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-533.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-877.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-880.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-615.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-525.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-189.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-701.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-827.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-425.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-533.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-877.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-880.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-615.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
