--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-338.8KB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-877.3KB/s(Youtube:不良林), server: 167.88.62.68, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-305.5KB/s(Youtube:不良林), server: 167.88.61.213, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-880.6KB/s(Youtube:不良林), server: 167.88.61.213, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-321.2KB/s(Youtube:不良林), server: 167.88.61.175, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-1.45MB/s(Youtube:不良林), server: 167.88.61.175, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇷🇺 俄罗斯联邦-477.9KB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-533.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-363.8KB/s(Youtube:不良林), server: 167.88.61.175, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-206.6KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇺🇸 美国-615.0KB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 167.88.63.59, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-561.3KB/s(Youtube:不良林), server: 167.88.63.59, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-305.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-880.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-477.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-615.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-305.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-880.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-477.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-615.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-305.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-880.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-477.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-615.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-305.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-880.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-477.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-615.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-305.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-880.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-477.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-615.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-305.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-880.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-477.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-615.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-305.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-880.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-477.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-615.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
