--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.47MB/s(Youtube:不良林), server: supersouth.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supersouth.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-495.2KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65015, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-440.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇷🇺 俄罗斯联邦-339.1KB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-307.6KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-900.8KB/s(Youtube:不良林), server: svip02.01download.xyz, port: 35099, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇬🇧 英国-2.10MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.52MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.99MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.69MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.60MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-306.3KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-868.0KB/s(Youtube:不良林), server: svip02.01download.xyz, port: 35093, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.79MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
+  - {name: 🇨🇳 中国-363.2KB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35113, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-503.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇩🇪 德国-1.83MB/s(Youtube:不良林), server: 52.58.249.78, port: 57824, type: ss, cipher: chacha20-ietf-poly1305, password: pryhyxya}
+  - {name: 🇨🇳 中国-391.1KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-339.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-900.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-868.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-339.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-900.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-868.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-339.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-900.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-868.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-339.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-900.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-868.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-339.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-900.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-868.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-339.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-900.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-868.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-339.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-900.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-868.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
