--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇻🇳 越南-598.6KB/s(Youtube:不良林), server: 192.186.129.66, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 192.186.129.66}}
-  - {name: 🇨🇳 中国-447.9KB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35091, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-344.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-1.38MB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35085, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-301.7KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.79MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.56MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.63MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-440.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-193.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇬🇧 英国-1.26MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-544.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-2.17MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.70MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.83MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-652.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-367.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.17MB/s(Youtube:不良林) 2, server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-598.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-301.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇻🇳 越南-598.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-301.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-598.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-301.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇻🇳 越南-598.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-301.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇻🇳 越南-598.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-301.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-598.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-301.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-598.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-301.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
